--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/posicionamento-de-elementos/style.css
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/posicionamento-de-elementos/style.css
@@ -1,7 +1,6 @@
 .super-mario {
     width: 200px;
     position: absolute;
-    z-index: 2;
     top: 50px;
     left: 40px;
   }
@@ -9,19 +8,28 @@
   .goomba {
     width: 100px;
     position: absolute;
-    z-index: 1;
     bottom: 10px;
     left: 80px;
   }
   
   .baloon {
-  
+    position: absolute;
+    bottom: 170px;
+    left: 350px;
+    z-index: 1;
   }
   
   .speach {
+    position: absolute;
     font-size: 25px;
+    bottom: 245px;
+    left: 370px;
+    z-index: 2;
   }
   
   .bowser {
+    position: absolute;
     width: 200px;
+    right: 450px;
+    bottom: 50px;
   }
